UC8: Filter Bogies using Streams with JUnit Test Cases