@@ -1,5 +1,6 @@
+package app;
 import java.util.*;
-import java.util.stream.*;
+import java.util.stream.Collectors;
 
 public class TrainConsistManagementApp {
 
@@ -12,26 +13,29 @@ public class TrainConsistManagementApp {
             this.capacity = capacity;
         }
 
+        @Override
         public String toString() {
             return name + " (" + capacity + ")";
         }
     }
 
+    // METHOD FOR TESTING (IMPORTANT 🔥)
+    public static List<Bogie> filterBogies(List<Bogie> bogies) {
+        return bogies.stream()
+                .filter(b -> b.capacity > 60)
+                .collect(Collectors.toList());
+    }
+
     public static void main(String[] args) {
 
-        System.out.println("===== UC8: Filter Bogies (capacity > 60) =====\n");
-
-        List<Bogie> bogies = List.of(
+        List<Bogie> bogies = Arrays.asList(
                 new Bogie("Sleeper", 72),
                 new Bogie("AC Chair", 60),
                 new Bogie("First Class", 40)
         );
 
-        List<Bogie> filtered = bogies.stream()
-                .filter(b -> b.capacity > 60)
-                .collect(Collectors.toList());
+        List<Bogie> result = filterBogies(bogies);
 
-        System.out.println("Filtered Bogies:");
-        System.out.println(filtered);
+        System.out.println("Filtered Bogies: " + result);
     }
 }
